# varpack

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config
scripts/: copy-mingw-deps.sh
src/varpack/: main.rs
src/varpack-gtk/: app.glade  app.rs  main.rs  ptr.rs
varpack/: Cargo.toml
varpack-gtk/: Cargo.toml
varpack-gtk/src/glade/: .gitignore  main.glade
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/tasks/: build.rs  copy_mingw_deps.rs  mod.rs  print_hello_world.rs
