[package]
name = "varpack-gtk"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI Parsing
clap = "2.33.1"
# String error
string-error = "0.1.0"
# vapor_archive base library
vapor_archive = "0.1.0"
# GTK
gtk = "0.8.1"
gio = "0.8.1"
